# python-starter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  setup-project.sh
.github/workflows/: ci.yml
src/python_starter/: __init__.py  main.py  py.typed
tests/: test_main.py
